--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "fumadocs-ui": "10.0.3",
-    "fumadocs-core": "10.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "fumadocs-mdx": "8.2.2"
+    "next": "^14.1.2",
+    "fumadocs-ui": "^10.0.4",
+    "fumadocs-core": "^10.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "fumadocs-mdx": "^8.2.3"
   },
   "devDependencies": {
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
-    "typescript": "5.3.3",
-    "@types/mdx": "2.0.10"
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
+    "typescript": "^5.4.2",
+    "@types/mdx": "^2.0.11"
   }
 }
