--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "next": "^14.2.3",
-    "fumadocs-ui": "^12.0.0",
-    "fumadocs-core": "^12.0.0",
+    "fumadocs-ui": "12.0.1",
+    "fumadocs-core": "12.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "fumadocs-mdx": "^8.2.28"
+    "fumadocs-mdx": "8.2.29"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
