--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   },
   "dependencies": {
     "next": "^14.2.5",
-    "fumadocs-ui": "13.2.2",
-    "fumadocs-core": "13.2.2",
+    "fumadocs-ui": "13.3.0",
+    "fumadocs-core": "13.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "fumadocs-mdx": "9.0.2"
   },
   "devDependencies": {
+    "@types/node": "22.3.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "typescript": "^5.5.4",
