--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "start": "next start"
+    "start": "next start",
+    "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
-    "next": "^14.2.5",
-    "fumadocs-ui": "13.4.1",
-    "fumadocs-core": "13.4.1",
+    "next": "^14.2.7",
+    "fumadocs-ui": "13.4.2",
+    "fumadocs-core": "13.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "fumadocs-mdx": "9.0.4"
+    "fumadocs-mdx": "10.0.0"
   },
   "devDependencies": {
-    "@types/node": "22.3.0",
-    "@types/react": "^18.3.3",
+    "@types/node": "22.5.2",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "typescript": "^5.5.4",
     "@types/mdx": "^2.0.13"
