--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
-    "next": "^14.2.8",
-    "fumadocs-ui": "13.4.10",
-    "fumadocs-core": "13.4.10",
+    "next": "15.0.0",
+    "fumadocs-ui": "14.0.0",
+    "fumadocs-core": "14.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "fumadocs-mdx": "10.0.2"
+    "fumadocs-mdx": "10.1.0"
   },
   "devDependencies": {
-    "@types/node": "22.5.4",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "typescript": "^5.5.4",
+    "@types/node": "22.7.7",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "typescript": "^5.6.3",
     "@types/mdx": "^2.0.13"
   }
 }
