--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "next": "15.5.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "fumadocs-ui": "15.8.1",
-    "fumadocs-core": "15.8.1",
+    "lucide-react": "^0.544.0",
+    "fumadocs-ui": "15.8.2",
+    "fumadocs-core": "15.8.2",
     "fumadocs-mdx": "12.0.1"
   },
   "devDependencies": {
