--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,8 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@/.source": [".source"],
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@/.source": [".source"]
     },
     "plugins": [
       {
