--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
-  "name": "fumadocs-ui-template",
+  "name": "example-next-mdx",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "start": "next start",
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
+    "fumadocs-core": "16.0.2",
+    "fumadocs-mdx": "13.0.0",
+    "fumadocs-ui": "16.0.2",
+    "lucide-react": "^0.546.0",
     "next": "16.0.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "lucide-react": "^0.546.0",
-    "fumadocs-ui": "16.0.1",
-    "fumadocs-core": "16.0.1",
-    "fumadocs-mdx": "13.0.0"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@types/node": "24.9.1",
+    "@tailwindcss/postcss": "^4.1.15",
+    "@types/mdx": "^2.0.13",
+    "@types/node": "^24.9.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
-    "typescript": "^5.9.3",
-    "@types/mdx": "^2.0.13"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.15",
+    "typescript": "^5.9.3"
   }
 }
